Markdown was added in jupyter notebook

--- a/DriverdistractionML.ipynb
+++ b/DriverdistractionML.ipynb
@@ -5,7 +5,52 @@
    "id": "9de12996",
    "metadata": {},
    "source": [
-    "# Driver distraction using Convolutional Neural Networks"
+    "# Detection of distracted driver using Convolutional Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "753a9381",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "267ecde8",
+   "metadata": {},
+   "source": [
+    "In this project, the detection of distracted driver with Machine Learning using Convolutional Neural Networks was analysed and predicted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbdb111d",
+   "metadata": {},
+   "source": [
+    "### Dataset description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a3f4857",
+   "metadata": {},
+   "source": [
+    "The dataset had set of training and test images. The training data splitted into ten classes from c0 to c9. The 10 classes to predict are:\n",
+    "\n",
+    "    c0: normal driving\n",
+    "    c1: texting - right\n",
+    "    c2: talking on the phone - right\n",
+    "    c3: texting - left\n",
+    "    c4: talking on the phone - left\n",
+    "    c5: operating the radio\n",
+    "    c6: drinking\n",
+    "    c7: reaching behind\n",
+    "    c8: hair and makeup\n",
+    "    c9: talking to passenger\n",
+    "    \n",
+    "Along with the set of images, two csv files were presented to assist our project. One with the details about the name of the images along with the class and another sample csv to show the submission format of the project."
    ]
   },
   {
@@ -14,6 +59,14 @@
    "metadata": {},
    "source": [
     "### Libraries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f541f3d",
+   "metadata": {},
+   "source": [
+    "The libraries were imported to support our project. The assistance of tensorflow and keras is vital to proceed ahead. With matplot to plot charts and pandas to perform csv read and write operations."
    ]
   },
   {
@@ -39,6 +92,14 @@
    "metadata": {},
    "source": [
     "### Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bc034e7",
+   "metadata": {},
+   "source": [
+    "The Convolutional Neural Network was constructed with input size of (100,100) with the '3' represents 'rgb' format of the image. With Batch normalization, we can standardize the data in between convolutional layers. Maxpooling is to find out the maximum value from the region covered by filter and the data will be converted to one dimensional array using flatten and dropout will help us to prevent overfitting. The dense layers were added to improve efficiency and with the final dense layer represents output with 10 classes. The optimizer 'adam' was used to compile the model."
    ]
   },
   {
@@ -123,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4078d940",
+   "metadata": {},
+   "source": [
+    "The working directory was set to acccess the folder contains training images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "0a5694ab",
@@ -139,6 +208,14 @@
    "metadata": {},
    "source": [
     "### Train and validation dataset split"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "167c914c",
+   "metadata": {},
+   "source": [
+    "Image generator was built to get access of images from the training folder. The data augumentation was used to generalize the model with horizontal flip, width and heigth shift range and rotation range. To improve the model, the training data were splitted into training and validation data in the ratio of 80:20. From the generator, the training and validation set can be accessed in the batch size of 64."
    ]
   },
   {
@@ -174,6 +251,14 @@
    "metadata": {},
    "source": [
     "### Model fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a418316",
+   "metadata": {},
+   "source": [
+    "The training and validation images made to fit with the CNN model on 60 iterations with steps per iteration will be length of the image generator of training set and length of image generator of validation set was denoted as validation steps."
    ]
   },
   {
@@ -329,6 +414,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "059afbd0",
+   "metadata": {},
+   "source": [
+    "The two plots were designed to visualize the learning curve of the model. One plot concentrated on Training and validation accuracy over 60 iterations and next one concentrated on training and validation loss."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "c0975f21",
@@ -409,6 +502,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b205338a",
+   "metadata": {},
+   "source": [
+    "Like training data, image generator were built for test data along with its directory. The important step of the project is the prediction of test images with the learning the CNN model has undergone with training and validation images."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "id": "f52303e7",
@@ -436,6 +537,14 @@
    "metadata": {},
    "source": [
     "### Preparing output dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66631730",
+   "metadata": {},
+   "source": [
+    "The sample submission csv was read by pandas to prepare the format of output. With image and images name taken from the csv, the prediction values was replaced with the original value of csv in the same format and convert it to a dataframe to export it easily into a csv file."
    ]
   },
   {
@@ -467,6 +576,14 @@
    "metadata": {},
    "source": [
     "### Exploratory data analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9763de8",
+   "metadata": {},
+   "source": [
+    "The number of images in each class were depicted with a bar plot."
    ]
   },
   {
@@ -513,6 +630,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52dafec7",
+   "metadata": {},
+   "source": [
+    "Then, the csv had been written from the 'testoutput' dataframe."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "id": "46aad030",
@@ -520,6 +645,22 @@
    "outputs": [],
    "source": [
     "testoutput.to_csv('Testoutput.csv', index = False, encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b52f4c",
+   "metadata": {},
+   "source": [
+    "### Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c4ecb70",
+   "metadata": {},
+   "source": [
+    "Thus, the prediction of test images from the model with the learning of training and validation images was successfully exported as a csv file with over 96% accuracy."
    ]
   }
  ],
