--- a/Driver distraction with CNN - Thamizhiniyan Pugazhenthi - 200941620.ipynb
+++ b/Driver distraction with CNN - Thamizhiniyan Pugazhenthi - 200941620.ipynb
@@ -660,7 +660,7 @@
    "id": "0c4ecb70",
    "metadata": {},
    "source": [
-    "Thus, the prediction of test images from the model with the learning of training and validation images was successfully exported as a csv file with over 96% accuracy."
+    "Thus, the prediction of test images from the model with the learning of training and validation images was successfully exported to a csv file with over 96% accuracy."
    ]
   },
   {
